force-app/main/default/objects/Event_Organiser__c/Event_Organiser__c.object-meta.xml
<CustomObject>
    <label>Event Organiser</label>
    <nameField>
        <label>Event Organiser Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Organisers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>