force-app/main/default/objects/Event_Organiser__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Event Address (lookup - address book)</description>
    <inlineHelpText>Enter the associated address</inlineHelpText>
    <label>Address</label>
    <referenceTo>Address_Book__c</referenceTo>
    <relationshipLabel>Event Organisers</relationshipLabel>
    <relationshipName>Event_Organisers</relationshipName>
    <type>Lookup</type>
</CustomField>