force-app/main/default/objects/Event_Organiser__c/fields/Alternative_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Email__c</fullName>
    <description>Alternative email of event organizer</description>
    <inlineHelpText>Enter the email of event organizer</inlineHelpText>
    <label>Alternative Email</label>
    <type>Email</type>
</CustomField>