force-app/main/default/objects/Event_Organiser__c/fields/Alternative_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Phone__c</fullName>
    <description>Alt. Phone no. of event organizer</description>
    <inlineHelpText>Enter Alt. Phone no. of event organizer</inlineHelpText>
    <label>Alternative Phone</label>
    <type>Phone</type>
</CustomField>