force-app/main/default/objects/Event_Organiser__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email of event organizer</description>
    <inlineHelpText>Enter email of event organizer</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>