force-app/main/default/objects/Event_Organiser__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone no. of the event organizer</description>
    <inlineHelpText>Enter Phone no. of the event organizer</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>